Add round result message

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="buttons">
+    <div id="buttons">
         <button id="rock">Rock</button>
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
     </div>
-    
+    <div id="results">
+        <p>Start the game first!</p>
+    </div>
 
 </body>
 <footer>
