--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <button id="scissors">Scissors</button>
     </div>
     <div id="results">
-        <p>Start the game first!</p>
+        <p id="summary">Start the game first!</p>
+        <p id="score">Score will be displayed here</p>
     </div>
 
 </body>
