--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Best of three Rock Paper Scissors!</h1>
     <div id="buttons">
         <button id="rock">Rock</button>
         <button id="paper">Paper</button>
